<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scroll_layout_main"
    tools:context=".Dialog.DialogAbout">

    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        style="@style/linear_layout_vertical">

        <LinearLayout
            style="@style/linear_layout_vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_agreement"
                style="@style/text_size_2_bold"
                android:text="@string/agreement_title"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                style="@style/linear_layout_horizontal"
                android:layout_marginEnd="10dp">

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="15dp"
                    android:text="I." />

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:justificationMode="inter_word"
                    android:text="@string/agreement1" />

            </LinearLayout>

            <LinearLayout
                style="@style/linear_layout_horizontal"
                android:layout_marginEnd="10dp">

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="15dp"
                    android:text="II." />

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:justificationMode="inter_word"
                    android:text="@string/agreement2" />

            </LinearLayout>

            <LinearLayout
                style="@style/linear_layout_horizontal"
                android:layout_marginEnd="10dp">

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="15dp"
                    android:text="III." />

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:justificationMode="inter_word"
                    android:text="@string/agreement3" />

            </LinearLayout>

            <LinearLayout
                style="@style/linear_layout_horizontal"
                android:layout_marginEnd="10dp">

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="15dp"
                    android:text="IV." />

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:justificationMode="inter_word"
                    android:text="@string/agreement4" />

            </LinearLayout>

            <LinearLayout
                style="@style/linear_layout_horizontal"
                android:layout_marginEnd="10dp">

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="15dp"
                    android:text="V." />

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:justificationMode="inter_word"
                    android:text="@string/agreement5" />

            </LinearLayout>

            <LinearLayout
                style="@style/linear_layout_horizontal"
                android:layout_marginEnd="10dp">

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="15dp"
                    android:text="VI." />

                <TextView
                    style="@style/text_size_1"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:justificationMode="inter_word"
                    android:text="@string/agreement6" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <Button
                style="@style/button"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom"
                android:id="@+id/btn_agree"
                android:text="I AGREE"/>

            <TextView
                android:id="@+id/tv_decline"
                style="@style/text_size_1"
                android:text="DECLINE" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>